# signate_rag_2024

./: .gitignore  README.md  pyproject.toml
data/evaluation/: Dockerfile  crag.py  docker-compose.yml  readme.md
data/evaluation/src/: dbmanager.py  evaluator.py  settings.py  validator.py
src/: 00_toy_rag.ipynb  01_glucose_faiss.ipynb
